# Pantheios

./: CMakeLists.txt
cmake/: TargetMacros.cmake
examples/c/example.c.101/: example.c.101.c
examples/c/example.c.assert/: example.c.assert.c
examples/c/example.c.extended_severity/: example.c.extended_severity.c
include/pantheios/: pantheios.h
include/pantheios/backends/: bec.AnsiConsole.h  bec.COMErrorObject.h  bec.WindowsConsole.h  bec.WindowsSyslog.h  bec.file.h  bec.speech.h  bec.syslog.h
include/pantheios/internal/: stock_levels.hpp
include/pantheios/quality/: contract.h
include/pantheios/severity/: levels.hpp
include/pantheios/util/backends/: arguments.h  context.hpp
projects/backends/: CMakeLists.txt
projects/backends/be.AnsiConsole/: CMakeLists.txt
projects/backends/bec.AnsiConsole/: CMakeLists.txt
projects/backends/bec.stock/: CMakeLists.txt
projects/backends/bec.stock.WithCallback/: CMakeLists.txt
projects/backends/bel.AnsiConsole/: CMakeLists.txt
projects/backends/ber.AnsiConsole/: CMakeLists.txt
src/backends/: bec.AnsiConsole.cpp  bec.COMErrorObject.cpp  bec.WindowsConsole.cpp  bec.WindowsDebugger.cpp  bec.WindowsSyslog.cpp  bec.file.cpp  bec.fprintf.cpp  bec.speech.cpp  bec.syslog.c
src/backends/be/: be.AnsiConsole.c
src/backends/bel/: bel.AnsiConsole.c
src/backends/ber/: ber.AnsiConsole.c
src/util/: be.context.cpp  be.parse.cpp  severity_strings.c
test/component/test.component.bec.fprintf/: CMakeLists.txt
test/component/test.component.details/: CMakeLists.txt
test/component/test.component.inserters.b64/: CMakeLists.txt
test/scratch/: CMakeLists.txt
test/scratch/test.scratch.WideString/: CMakeLists.txt
test/scratch/test.scratch.be.WindowsSyslog/: test.scratch.be.WindowsSyslog.cpp
test/scratch/test.scratch.be.WindowsSyslog.WithCallback/: test.scratch.be.WindowsSyslog.WithCallback.cpp
test/scratch/test.scratch.be.speech/: test.scratch.be.speech.cpp
test/scratch/test.scratch.be.syslog/: test.scratch.be.syslog.cpp
test/scratch/test.scratch.be.syslog.WithCallback/: test.scratch.be.syslog.WithCallback.cpp
test/scratch/test.scratch.bec.AnsiConsole/: CMakeLists.txt  test.scratch.bec.AnsiConsole.c
test/unit/: CMakeLists.txt
test/unit/test.unit.bec.AnsiConsole/: CMakeLists.txt  entry.cpp
test/unit/test.unit.bec.COMErrorObject/: test.unit.bec.COMErrorObject.cpp
test/unit/test.unit.bec.WindowsConsole/: CMakeLists.txt  entry.cpp
test/unit/test.unit.bec.WindowsSyslog/: CMakeLists.txt  entry.cpp
test/unit/test.unit.bec.file/: test.unit.bec.file.cpp
test/unit/test.unit.bec.speech/: CMakeLists.txt  entry.cpp
test/unit/test.unit.bec.syslog/: CMakeLists.txt  entry.cpp
test/unit/test.unit.util.getcurrenttime/: CMakeLists.txt
test/unit/test.unit.util.onbailout/: CMakeLists.txt
test/unit/test.unit.util.parse_args/: CMakeLists.txt  entry.cpp
